--- a/my-app/package.json
+++ b/my-app/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "^4.3.1",
+    "bootstrap": "^4.1.3",
     "react": "^16.9.0",
-    "react-cookie": "^4.0.1",
+    "react-cookie": "^3.0.4",
     "react-dom": "^16.9.0",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "3.1.2",
+    "reactstrap": "^6.5.0",
     "router-react": "0.0.1"
   },
   "scripts": {
