--- a/my-app/package.json
+++ b/my-app/package.json
@@ -6,6 +6,7 @@
     "bootstrap": "^4.1.3",
     "react": "^16.9.0",
     "react-cookie": "^3.0.4",
+    "react-date-picker": "^7.8.2",
     "react-dom": "^16.9.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "3.1.2",
