--- a/my-app/package.json
+++ b/my-app/package.json
@@ -7,6 +7,7 @@
     "react": "^16.9.0",
     "react-cookie": "^3.0.4",
     "react-date-picker": "^7.8.2",
+    "react-datepicker": "^2.9.6",
     "react-dom": "^16.9.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "3.1.2",
